fix: form content now sent to company email

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </a>
     </div>
     <div class="first-container">
-        <form class="form-base" action="https://api.staticforms.xyz/submit" href="/index.html" method="post" id="lead-form">
+        <form class="form-base" action="https://api.staticforms.xyz/submit" method="post" id="lead-form">
             <h1 class="form-title title-font medium-screen-title">
                 Venha investir ou morar no SMARTDERBY!
             </h1>
             <div class="form-content">
-  	        <input type="hidden" name="accessKey" value="b3163427-65aa-4751-bc28-d83648844c45"> <!-- Required -->
+  	        <input type="hidden" name="accessKey" value="1e286dec-b271-4d71-a505-cb545720541d"> <!-- Required -->
                 <label class="form-label" for="name"><ion-icon name="person"></ion-icon> Nome (4 a 8 caractéres)</label>
                 <input class="form-input" type="text" id="name" name="name" minlength="4" maxlength="60" size="64" required>
                 <label class="form-label" for="email"><ion-icon name="mail"></ion-icon> Email</label>
@@ -47,7 +47,7 @@
                     <option value="noite">Noite</option>
                 </select>
             </div>
-            <button class="form-button" type="submit" value="Submit" onclick="window.location.href = 'index.html';">Enviar</button>
+            <button class="form-button" type="submit" value="Submit">Enviar</button>
         </form>
     </div>
     <div class="mid-bar">
@@ -227,7 +227,7 @@
             </span>
         </div>
         <form class="help-me-form" action="https://api.staticforms.xyz/submit" method="post" id="condominium-form">
-  	    <input type="hidden" name="accessKey" value="b3163427-65aa-4751-bc28-d83648844c45"> <!-- Required -->
+  	    <input type="hidden" name="accessKey" value="1e286dec-b271-4d71-a505-cb545720541d"> <!-- Required -->
             <label class="form-label" for="name"><ion-icon name="person"></ion-icon> Nome Completo:</label>
             <input class="form-input" type="text" id="name" name="name" minlength="4" maxlength="60" size="64" required>
             <label class="form-label" for="email"><ion-icon name="mail"></ion-icon> Email:</label>
@@ -248,7 +248,7 @@
             </select>
             <label class="form-label" for="message"><ion-icon name="chatbox-ellipses"></ion-icon> Mensagem:</label>
             <textarea class="form-message" name="message" id="message" cols="40" rows="10"></textarea>
-            <button class="form-button" type="submit" onclick="window.location.href = 'index.html';">Enviar</button>
+            <button class="form-button" type="submit">Enviar</button>
         </form>
     </div>
 
